@@ -30,23 +30,25 @@ Windows system as applicable.
 Beside launching or stopping a set of the NUT programs in certain cases,
 this helper program also allows to register (or un-register) itself as a
 Windows service. To actually manage the service from command line you can
-execute the Windows `net` command, e.g.:
+execute the Windows `net` or `sc` commands, e.g.:
 
 ----
 net stop "Network UPS Tools"
 net start "Network UPS Tools"
+sc query "Network UPS Tools"
 ----
 
 You can also execute `nut start` to automatically register the service
 (if not yet registered) and start it, and `nut stop` to stop the service
-(if registered and running).
+(if registered and running), and `nut status` to check on it (if registered).
 
 Note that for a Windows machine to act as a NUT data server for further
 clients, you may have to add Windows Firewall rules to allow incoming
 connections (by default to port `3493/tcp`), e.g. using PowerShell to
 elevate (alternately right-click a "Command Prompt" shortcut and select
 "Run as administrator"), and execute `netsh` to actually configure the
-needed "Advanced Firewall" rule:
+needed "Advanced Firewall" rule (align the path to binary with your
+installation):
 
 ----
 REM Elevate to administrator status then run netsh to add firewall rule.
@@ -104,6 +106,9 @@ and try to start this service.
 
 *stop*::
 Try to stop a Windows service called "Network UPS Tools".
+
+*status*::
+Try to query status of a Windows service called "Network UPS Tools".
 
 DIAGNOSTICS
 -----------
