@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3606 utf-8
+personal_ws-1.1 en 3607 utf-8
 AAC
 AAS
 ABI
@@ -3045,6 +3045,7 @@ safenet
 salicru
 sbin
 sbindir
+sc
 scanopts
 scd
 sched
